--- a/packages/react/src/components/ConnectModal/style.module.css
+++ b/packages/react/src/components/ConnectModal/style.module.css
@@ -2,26 +2,29 @@
   @apply relative flex justify-center items-center;
   @apply h-12 my-1;
 }
+
 .title {
   @apply items-center text-2xl text-center;
 }
+
 .close-btn {
   @apply absolute top-0 right-0;
   @apply btn btn-circle btn-ghost;
 }
+
 .close-icon {
   @apply h-6 w-6;
 }
 
 .container {
   @apply flex flex-col items-center;
-  @apply mt-4;
+  @apply mt-3;
 }
 
 .item {
-  @apply btn btn-wide btn-ghost;
-  @apply flex flex-col items-center;
-  @apply mb-2;
-  @apply cursor-pointer;
-  @apply hover:bg-blue-400;
+  @apply btn btn-wide btn-ghost flex flex-col items-center mb-2 cursor-pointer transition-colors duration-200;
+  @apply border-2 border-gray-300;
+  @apply hover:bg-blue-400 hover:text-white hover:border-blue-400;
+  @apply focus:bg-blue-300 focus:text-white focus:border-blue-300;
+  @apply active:bg-blue-500 active:text-white active:border-blue-500;
 }
